	socklnd   - kernels up to 2.6.16
	qswlnd    - Qsnet kernel modules 5.20 and later
	openiblnd - IbGold 1.8.2
	o2iblnd   - OFED 1.1
	viblnd    - Voltaire ibhost 3.4.5 and later
	ciblnd    - Topspin 3.2.0
	iiblnd    - Infiniserv 3.3 + PathBits patch
	gmlnd     - GM 2.1.22 and later
	mxlnd     - MX 1.2.1 or later
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
       * bug fixes
	
Severity   : normal
Frequency  : rare
Description: gmlnd ignored some transmit errors when finalizing lnet messages.

Severity   : minor
Frequency  : rare
Description: ptllnd logs a piece of incorrect debug info in kptllnd_peer_handle_hello.

Severity   : minor
Frequency  : rare
Description: the_lnet.ln_finalizing was not set when the current thread is
             about to complete messages. It only affects multi-threaded 
	     user space LNet.
	
Severity   : normal
Frequency  : rare
Bugzilla   : 11472
Description: Changed the default kqswlnd ntxmsg=512
	
Severity   : major
Frequency  : rare
Bugzilla   : 12458
Description: Assertion failure in kernel ptllnd caused by posting passive
             bulk buffers before connection establishment complete.
	
Severity   : major
Frequency  : rare
Bugzilla   : 12455
Description: A race in kernel ptllnd between deleting a peer and posting
             new communications for it could hang communications -
	     manifesting as "Unexpectedly long timeout" messages.
	
Severity   : major
Frequency  : rare
Bugzilla   : 12432
Description: Kernel ptllnd lock ordering issue could hang a node.
	
Severity   : major
Frequency  : rare
Bugzilla   : 12016
Description: node crash on socket teardown race

Severity   : minor
Frequency  : 'lctl peer_list' issued on a mx net
Bugzilla   : 12237
Description: Enable lctl's peer_list for MXLND

Severity   : major
Frequency  : after Ptllnd timeouts and portals congestion
Bugzilla   : 11659
Description: Credit overflows
Details    : This was a bug in ptllnd connection establishment.  The fix